# datapipeline

./: README.md  pyproject.toml
docs/: Design.md
pipeline/: __init__.py  cache.py  export.py  io.py  packing.py  pipeline.py  processors.py  text.py  tokenizer.py  utils.py
pipeline/io/: __init__.py  export.py  file_scanner.py  hdf5_handler.py
pipeline/processors/: __init__.py  base.py  dpo.py  factory.py  pretrain.py  sft.py
pipeline/strategies/: __init__.py  alpaca.py  base.py  chatml.py  factory.py
pipeline/tokenize/: __init__.py  chat_template.py  tokenizer.py
scripts/: cache_h5.py
scripts/pre_train/: chinese-cosmopedia.py
scripts/reforce_learning/: dpp_chinese_dpo_pairs.py
scripts/supervised_finetuning/: sft_alpaca_gpt4.py  sft_chinese_instruct.py  sft_magicoder.py  sft_openhermes.py
tests/: __init__.py  test_cache.py  test_io.py  test_packing.py  test_processors.py  test_strategies.py  test_tokenizer.py
